--- a/style.css
+++ b/style.css
@@ -6,13 +6,29 @@
 }
 
 body {
-    ackground-image:url("https://cdn-eeafe.nitrocdn.com/ronSyXatAkJLnOJRGMhlJdhhuaZLjWJV/assets/images/optimized/rev-f118bc1/competitividad.ccpasto.org.co/wp-content/uploads/2021/06/4892-1_Parque_20_de_Julio_y_Catedral_de_Ipiales-1-1024x683.jpg");
+    Background-image:url("https://cdn-eeafe.nitrocdn.com/ronSyXatAkJLnOJRGMhlJdhhuaZLjWJV/assets/images/optimized/rev-f118bc1/competitividad.ccpasto.org.co/wp-content/uploads/2021/06/4892-1_Parque_20_de_Julio_y_Catedral_de_Ipiales-1-1024x683.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     height: 100vh;
     color:rgb(0, 0, 0);
     box-sizing: border-box;
+}
+body::before {
+    content: ""; /* Capa transparente */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.5); /* Ajusta el color y la opacidad (50% blanco en este caso) */
+    z-index: -1; /* Coloca la capa detrás del contenido */
+}
+h1{
+    text-align: center;
+}
+p{
+    text-align: justify;
 }
 .header1{
     background-color: lightgreen;
@@ -41,22 +57,27 @@ body {
 .segundo_contenedor{
     display: flex;
     flex-direction: row;
-    gap:20px;
+    gap:10px;
+    align-items: baseline;
 }
-.bienvenida h1{
+.bienvenida{
     font-size: 24px;
-    color: #333;
+    color: #1d1a1a;
     margin-bottom: 10px;
 }
 
-.bienvenida p {
-    font-size: 16px;
-    color: #555;
-}
 
 .imagen_ipiales{
-    width: 0,3px;
-    height: 1px;
+    margin-left: 10%;
+    width: 80%;
+    height: 80%;
+}
+.tercer_contenedor{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
 .segundo_historia{
@@ -84,3 +105,24 @@ body {
         background-color: #ca6702;
         padding: 2% 0% 0% 15%;
     }
+.presentacion__enlaces__link{
+        width: 20%;
+        text-align: center; 
+        padding: 1.5% 1.5%;
+        border-color: black;
+        border-radius:8px;
+        font-family: var(--fuente-montserrat);
+        font-size:1.5rem;
+        font-weight: 600;
+        text-decoration: none;
+        color: var(--color-secundario);
+        border: 2px solid var(--color-terciario);
+        display: flex;
+        justify-content: space-between;
+        text-align: center;
+        gap: 10%; 
+        background-color: aqua;
+}
+.parrafo_cultura{
+    text-align: center;
+}
