--- a/style.css
+++ b/style.css
@@ -126,3 +126,19 @@ p{
 .parrafo_cultura{
     text-align: center;
 }
+@media(max-width: 1200px){
+    .header{
+        padding: 10%;
+    }
+    .header__menu{
+        justify-content: center;
+    }
+    .presentacion{
+
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+    .presentacion__contenido{
+        width: auto;
+    }
+}
